added some mining items to ItemRegistry. fixed mining pet acquisition. a stat of all ores mined is now kept per player and mining pets are granted based on that statistic. fixed warden pet fixed Waterlogged perk not displaying name